tests/requests/invalid/014.http
PUT /stuff/here?foo=bar HTTP/1.0\r\n
CONTENT-LENGTH: -1\r\n
\r\n
{"test": "-1}